--- a/assets/style.css
+++ b/assets/style.css
@@ -89,3 +89,59 @@ input[type="checkbox"]{
   margin-bottom: 30px;
   margin-top: 20px;
 }
+
+/* Styling for target report */
+
+.target-report-card {
+  margin-top: 80px;
+  border: 1px #cecece solid;
+  box-shadow: 0px 0px 20px gainsboro;
+  border-radius: 5px;
+  height: 350px;
+}
+
+.target-report-card-NL {
+  background: #b67a0c40;
+}
+
+.target-report-card-UK {
+  background: #aa2e3940;
+}
+
+.target-report-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.target-report-title-NL {
+  background: #b67a0c;
+  color:white;
+}
+
+.target-report-title-UK {
+  background: #aa2e39;
+  color:white;
+}
+
+.target-report-text {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+}
+
+.target-report-explanation {
+  font-style: italic;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  opacity: 0.4;
+}
