--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,7 @@ input[type="checkbox"]{
 /* Styling for country selection box in comparison screen */
 
 .country-selection-instruction {
+  width: 250px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   background: #f2f2f2;
@@ -66,14 +67,14 @@ input[type="checkbox"]{
 /* Styling for attitude dropdown list in comparison screen */
 
 #attitude-dropwdown {
-  max-width: 400px;
+  max-width: 350px;
   margin: auto;
 }
 
 /* Styling for location level dropdoen list in USA screen */
 
 #US-location-dropwdown {
-  max-width: 400px;
+  max-width: 350px;
   margin: auto;
 }
 
@@ -90,14 +91,27 @@ input[type="checkbox"]{
   margin-top: 20px;
 }
 
+/* Styling for introduction message */
+
+.introduction-message {
+  text-align: center;
+}
+
 /* Styling for target report */
 
 .target-report-card {
-  margin-top: 80px;
+  margin-top: 70px;
   border: 1px #cecece solid;
   box-shadow: 0px 0px 20px gainsboro;
+  transition: box-shadow 0.5s;
   border-radius: 5px;
-  height: 350px;
+  min-height: 350px;
+}
+
+.target-report-card:hover {
+  box-shadow: 0px 0px 30px #00000075;
+  border: 1px #AAAAAA solid;
+  cursor: pointer;
 }
 
 .target-report-card-NL {
@@ -108,6 +122,20 @@ input[type="checkbox"]{
   background: #aa2e3940;
 }
 
+.target-report-card-USA {
+  background: #45688840;
+}
+
+.target-report-card-comp {
+  background: #42424240;
+}
+
+.target-report-col {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+
 .target-report-title {
   font-size: 1.1rem;
   font-weight: 600;
@@ -116,7 +144,6 @@ input[type="checkbox"]{
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 5px;
-  margin-bottom: 10px;
 }
 
 .target-report-title-NL {
@@ -129,19 +156,39 @@ input[type="checkbox"]{
   color:white;
 }
 
+.target-report-title-USA {
+  background: #456888;
+  color:white;
+}
+
+.target-report-title-comp {
+  background: #424242;
+  color:white;
+}
+
+
 .target-report-text {
+  border-bottom: 1px solid #00000020;
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
 }
 
+.target-report-text p {
+  margin-bottom: 0px;
+}
+
 .target-report-explanation {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  text-align: center;
   font-style: italic;
+  font-size: 0.9rem;
   padding-left: 20px;
   padding-right: 20px;
-  padding-top: 5px;
+  padding-top: 20px;
   padding-bottom: 5px;
-  opacity: 0.4;
+  opacity: 0.3;
 }
